update bug on create job
